--- a/et3.tex
+++ b/et3.tex
@@ -1,4 +1,4 @@
-% Created 2023-06-17 Sat 14:44
+% Created 2023-06-22 Thu 10:34
 \documentclass[9pt, b5paper]{article}
 \usepackage{xeCJK}
 \usepackage[T1]{fontenc}
@@ -560,16 +560,18 @@ public enum MailboxType {
 \item 读上下面的顶层的 NetInnerComponentOnReadEvent.cs 的顶层某个某些服，读到消息后的消息处理逻辑
 \item 知道，当前帮助类，就是衔接上面的两条顶层调用，与底层具体处理逻辑的桥，把框架上中下层连接连通起来。
 \item 分析这个类，应该可以理解底层不同逻辑方法的前后调用关系，消息处理的逻辑模块先后顺序，以及必要的可能的调用频率，或调用上下文情境等。明天上午再看一下
+\item 是谁调用这个帮助类？ \textbf{IMHandler类的某些继承类} 。我目前仍只总结和清楚了两个抽象继承类，但还不曾熟悉任何实现子类，要去弄那些，顺便把位置相关的也弄懂了
 \item 上面 \textbf{【ActorMessageSenderComponentSystem.cs】的使用情境} ：有个 \textbf{【服务端热更新的帮助】类MessageHelper.cs}, 发Actor 消息，与ActorLocation 位置消息，也会都是调用 ActorMessageSenderComponentSystem.cs 里定义的底层逻辑。 
 \begin{minted}[fontsize=\scriptsize,linenos=false]{csharp}
 public static class ActorHandleHelper {
     public static void Reply(int fromProcess, IActorResponse response) {
-        if (fromProcess == Options.Instance.Process) { // 返回消息是同一个进程
+        if (fromProcess == Options.Instance.Process) { // 返回消息是同一个进程：没明白，这里为什么就断定是同一进程的消息了？直接处理
             // NetInnerComponent.Instance.HandleMessage(realActorId, response); // 等同于直接调用下面这句【我自己暂时放回来的】
-            ActorMessageSenderComponent.Instance.HandleIActorResponse(response);
+            ActorMessageSenderComponent.Instance.HandleIActorResponse(response); // 【没读懂：】同一个进程内的消息，不走网络层，直接处理。什么情况下会是发给同一个进程的？ET7 重构后，同一进程下可能会有不同的先前小服：Realm 注册登录服，Gate 服等；如果不同的SceneType.Map-etc 先前场景小服只要在同一进程，就可以不走网络层吗？
             return;
         }
-        Session replySession = NetInnerComponent.Instance.Get(fromProcess);
+        // 【不同进程的消息处理：】走网络层，就是调用会话框来发出消息
+        Session replySession = NetInnerComponent.Instance.Get(fromProcess); // 从内网组件单例中去拿会话框：不同进程消息，一定走网络，通过会话框把返回消息发回去
         replySession.Send(response);
     }
     public static void HandleIActorResponse(IActorResponse response) {
@@ -602,7 +604,7 @@ public static class ActorHandleHelper {
                         IActorResponse response = ActorHelper.CreateResponse(iActorRequest, ErrorCore.ERR_NotFoundActor);
                         Reply(fromProcess, response);
                         break;
-                    }
+                    } // 调用管理器组件的处理方法 
                     await ActorMessageDispatcherComponent.Instance.Handle(entity, fromProcess, iActorRequest);
                 }
                 break;
@@ -634,28 +636,26 @@ public static class ActorHandleHelper {
             return;
         }
         switch (mailBoxComponent.MailboxType) {
-        case MailboxType.MessageDispatcher: {
-            using (await CoroutineLockComponent.Instance.Wait(CoroutineLockType.Mailbox, realActorId)) {
-                if (entity.InstanceId != realActorId) {
-                    break;
+            case MailboxType.MessageDispatcher: {
+                using (await CoroutineLockComponent.Instance.Wait(CoroutineLockType.Mailbox, realActorId)) {
+                    if (entity.InstanceId != realActorId) 
+                        break;
+                    await ActorMessageDispatcherComponent.Instance.Handle(entity, fromProcess, iActorMessage);
                 }
+                break;
+            }
+            case MailboxType.UnOrderMessageDispatcher: {
                 await ActorMessageDispatcherComponent.Instance.Handle(entity, fromProcess, iActorMessage);
+                break;
             }
-            break;
-        }
-        case MailboxType.UnOrderMessageDispatcher: {
-            await ActorMessageDispatcherComponent.Instance.Handle(entity, fromProcess, iActorMessage);
-            break;
-        }
-        case MailboxType.GateSession: {
-            if (entity is Session gateSession) {
-                // 发送给客户端
-                gateSession.Send(iActorMessage);
+            case MailboxType.GateSession: {
+                if (entity is Session gateSession) 
+                    // 发送给客户端
+                    gateSession.Send(iActorMessage);
+                break;
             }
-            break;
-        }
-        default:
-            throw new Exception($"no mailboxtype: {mailBoxComponent.MailboxType} {iActorMessage}");
+            default:
+                throw new Exception($"no mailboxtype: {mailBoxComponent.MailboxType} {iActorMessage}");
         }
     }
 }
