--- a/et3.org
+++ b/et3.org
@@ -27,19 +27,22 @@ public readonly struct ActorMessageSender {
     }
 }
    #+END_SRC
-** ActorMessageSenderComponent: 这个组件里有个计时器自动计时的超时时段、特定超时类型的超时时长成员变量
+** ActorMessageSenderComponent: 这个组件里有个计时器自动计时的超时时段、特定超时类型的超时时长成员变量，背后有套计时器管理组件，自动检测消息的发送超时。
 - 超时时间：这个组件有计时器自动计时和超时激活的逻辑，这里定义了这个组件类型的超时时长，在ActorMessageSenderComponentSystem.cs 文件的 *【Invoke(TimerInvokeType.ActorMessageSenderChecker)】* 标注的ActorMessageSenderChecker 里会用到，检测超时与否
+- *【组件里消息自动超时Timer 的计时器机制】* ：
+  - long TimeoutCheckTimer 是个重复闹钟
+  - *【TimerComponent】* ：是框架里的单例类，那么应该是，框架里所有的 Timer 定时计时器，应该是由这个单例管理类统一管理。那么这个组件应该能够负责相关逻辑。
    #+BEGIN_SRC csharp
 [ComponentOf(typeof(Scene))]
 public class ActorMessageSenderComponent: Entity, IAwake, IDestroy {
 // 超时时间：这个组件有计时器自动计时和超时激活的逻辑，这里定义了这个组件类型的超时时长，在【Invoke(TimerInvokeType.ActorMessageSenderChecker)】标注的ActorMessageSenderChecker 里会用到，检测超时与否
-    public const long TIMEOUT_TIME = 40 * 1000; 
+    public const long TIMEOUT_TIME = 40 * 1000;
     public static ActorMessageSenderComponent Instance { get; set; }
     public int RpcId;
-// 下面：这么理解： ET7 里是组件就是一个管理类，管理了对所有：不同 rpc-id 的消息发送器，所以有序字典管理，方便添加与移除
     public readonly SortedDictionary<int, ActorMessageSender> requestCallback = new SortedDictionary<int, ActorMessageSender>();
-    public long TimeoutCheckTimer;
-    public List<int> TimeoutActorMessageSenders = new List<int>();
+// 这个 long: 是重复闹钟的闹钟实例ID, 用来区分任何其它闹钟的
+    public long TimeoutCheckTimer; 
+    public List<int> TimeoutActorMessageSenders = new List<int>(); // 这桢更新里：待发送给的（接收者rpcId）接收者链表
 }
    #+END_SRC
 ** ActorMessageSenderComponentSystem: 这个类底层封装比较多，功能模块因为是服务器端不太敦悉，多看几遍
@@ -59,6 +62,18 @@ public static class ActorMessageSenderComponentSystem {
              } catch (Exception e) {
                 Log.Error($"move timer error: {self.Id}\n{e}");
             }
+        }
+    }
+    [ObjectSystem]
+    public class ActorMessageSenderComponentAwakeSystem: AwakeSystem<ActorMessageSenderComponent> {
+// 【组件重复闹钟的设置】：实现组件内，消息的自动计时，超时触发Invoke 标签，调用相关逻辑来检测超时消息
+        protected override void Awake(ActorMessageSenderComponent self) {
+            ActorMessageSenderComponent.Instance = self;
+// 这个重复闹钟，是消息自动计时超时过滤器的上下文连接桥梁
+// 它注册的回调 TimerInvokeType.ActorMessageSenderChecker, 会每个消息超时的时候，都会回来调用 checker 的 Run()==>Check() 方法
+// 应该是重复闹钟每秒重复一次，就每秒检查一次，调用一次Check() 方法来检查超时？是过滤器会给服务器减压；但这里的自动检测会把压分在各消息发送组件服务器上
+// 这个重复间隔 1 秒钟的时间间隔，它计 1 秒钟开始，重复的逻辑是重复闹钟处理
+            self.TimeoutCheckTimer = TimerComponent.Instance.NewRepeatedTimer(1000, TimerInvokeType.ActorMessageSenderChecker, self);
         }
     }//...
 // Run() 方法：通过同步异常到ETTask, 通过ETTask 封装的抛异常方式抛出两类异常并返回；和对正常非异常返回消息，同步结果到ETTask, ETTask() 用触发调用注册过的非空回调
