--- a/ET.org
+++ b/ET.org
@@ -1091,6 +1091,7 @@ public sealed class Player : Entity, IAwake<string> {
 - 这里可以看见，即使是说，只传一个参数，帐户名进来，新的ET7 框架里，因为移除了 ECS 中的Component 最小组件，这种即便感觉永远不需要热更新，可以Model 层固定不变的，也都热更新到了热更新层，不得不给他们弄成是【生成系】。
 - 【小单元生成系】：目前还存在几个连通不通的问题。比如热更新层、域的生成系方法不被系统识到。不识别的原因大概是不曾 Awake(). 要去测试和添加这些系统，看能否消掉那一大堆一大堆的编译错误。
 - 【小单元生成系】：另外的问题是，热更域中的方法全是静态方法，怎么调用呢？记得pdf 里，哪里记过两种不同的调用方法，找不到。记在 et2.pdf 里的Net 网络交互相关部分。
+- 【小单元生成系】：在框架中找不到使用它的例子。有这个类，如何使用呢？
 #+BEGIN_SRC csharp
 [FriendOf(typeof(Player))]
 public static class PlayerSystem {
