--- a/et3.tex
+++ b/et3.tex
@@ -1,4 +1,4 @@
-% Created 2023-06-23 Fri 09:32
+% Created 2023-06-25 Sun 11:34
 \documentclass[9pt, b5paper]{article}
 \usepackage{xeCJK}
 \usepackage[T1]{fontenc}
@@ -716,6 +716,7 @@ public class NetInnerComponentOnReadEvent: AEvent<NetInnerComponentOnRead> {
 }
 \end{minted}
 
+
 \section{StartConfigComponent: 找【各种服】的起始初始化地址}
 \label{sec-2}
 \subsection{ConfigSingleton<T>: ProtoObject, ISingleton}
@@ -1202,6 +1203,7 @@ public class GateSessionKeyComponent : Entity, IAwake {
 }
 \end{minted}
 
+
 \section{ET7 数据库相关【服务端】}
 \label{sec-3}
 \begin{itemize}
@@ -1332,6 +1334,7 @@ public partial class StartZoneConfig: ProtoObject, IConfig {// 小区配置
 \end{minted}
 \end{itemize}
 
+
 \section{网关服：客户端信息发送的直接代理，中转站，组件分析}
 \label{sec-4}
 \begin{itemize}
@@ -1375,6 +1378,7 @@ public class NetServerComponent: Entity, IAwake<IPEndPoint>, IDestroy {
 }
 \end{minted}
 
+
 \section{服务器的功能概述：各服务器的作用（这个不是ET7 版本的，以前的）}
 \label{sec-5}
 \begin{itemize}
@@ -1387,6 +1391,7 @@ public class NetServerComponent: Entity, IAwake<IPEndPoint>, IDestroy {
 \item Benchmark：连接内网和测试服务器承受力。加载有内网组件NetInnerComponent，服务器承受力测试组件BenchmarkComponent。
 \end{itemize}
 
+
 \section{Session 会话框相关}
 \label{sec-6}
 \begin{itemize}
@@ -1394,137 +1399,788 @@ public class NetServerComponent: Entity, IAwake<IPEndPoint>, IDestroy {
 \item 就是说，这个新的ET7 框架下，服务端的这些，事件机制的，没弄明白没弄透彻。
 \end{itemize}
 
-\section{Unit: 这个模块还不太懂，需要明天上午花时间再看一下}
+
+\section{Root 客户端根场景管理以及必要的组件：【爱表哥，爱生活！！！任何时候，活宝妹就是一定要嫁给亲爱的表哥！！爱表哥，爱生活！！！】}
 \label{sec-7}
 \begin{itemize}
-\item 【Unit】究竟是什么：感觉像是视图里的控件的基本单位？它带位置、旋转信息
-\item 有个编译错误说：这个组件不可以同时成分多于一个不同组件组成元件。。。可是框架中使用的地方，明明把它添加进了不同的组件。去弄明白框架里，如何控件一个组件只能成为一个【不能多于1 个】组件的组成部分的？
+\item 昨天晚上，今天上午把这个根场景下的必要的组件，疑难点大致又看了一遍过了一遍。以后再有什么不懂，或是理解一点儿新的，再添加。【爱表哥，爱生活！！！任何时候，活宝妹就是一定要嫁给亲爱的表哥！！！】
+\item 把这个客户端的根场景相关的管理组件整理一下。在系统启动起来的时候，公用组件以及客户端组件的时候，分别有添加一些必要的组件。
+\item 这里，当把根场景 Root.Instance.Scene 下添加的组件整理好，就看见，几乎所有客户端必要需要的组件这里都添加了，那么刚才几分钟前，我想要自己添加一个的SceneType.AllServer 里模仿参考项目想要添加的。这里需要想一下：两个都需要吗，还是SceneType.AllServer 因为这个根场景下都加了，我自己画蛇添足的全服就可以不要了？
 \end{itemize}
-\subsection{UnitGateComponent:}
+\subsection{Root.cs}
 \label{sec-7-1}
 \begin{minted}[fontsize=\scriptsize,linenos=false]{csharp}
-[ComponentOf(typeof(Gamer))]
-// [ComponentOf(typeof(User))]  // 这里为什么会成为：同一个组件只能为一个什么XX 的子组件组成部分？
-// [ComponentOf(typeof(Unit))]
-public class UnitGateComponent : Entity, IAwake<long>, ITransfer {
-    public long GateSessionActorId { get; set; }
-
-    // // 感觉下面这个方法：不再必要，也不应该，也会报错的
-    // public ActorMessageSender GetActorMessageSender() {
-    // 	return Game.Scene.GetComponent<ActorMessageSenderComponent>().Get(this.GateSessionActorId);
-    // }
+// 管理根部的Scene: 这个根部，是全局视图的根节点
+public class Root: Singleton<Root>, ISingletonAwake { // 单例类，自觉醒
+    // 管理所有的Entity: 
+    private readonly Dictionary<long, Entity> allEntities = new();
+    public Scene Scene { get; private set; }
+    public void Awake() {
+        this.Scene = EntitySceneFactory.CreateScene(0, SceneType.Process, "Process");
+    }
+    public override void Dispose() {
+        this.Scene.Dispose();
+    }
+    public void Add(Entity entity) {
+        this.allEntities.Add(entity.InstanceId, entity);
+    }
+        
+    public void Remove(long instanceId) {
+        this.allEntities.Remove(instanceId);
+    }
+    public Entity Get(long instanceId) {
+        Entity component = null;
+        this.allEntities.TryGetValue(instanceId, out component);
+        return component;
+    }
+        
+    public override string ToString() {
+        StringBuilder sb = new();
+        HashSet<Type> noParent = new HashSet<Type>();
+        Dictionary<Type, int> typeCount = new Dictionary<Type, int>();
+        HashSet<Type> noDomain = new HashSet<Type>();
+        foreach (var kv in this.allEntities) {
+            Type type = kv.Value.GetType();
+            if (kv.Value.Parent == null) {
+                noParent.Add(type);
+            }
+            if (kv.Value.Domain == null) {
+                noDomain.Add(type);
+            }
+            if (typeCount.ContainsKey(type)) {
+                typeCount[type]++;
+            }
+            else {
+                typeCount[type] = 1;
+            }
+        }
+        sb.AppendLine("not set parent type: ");
+        foreach (Type type in noParent) {
+            sb.AppendLine($"\t{type.Name}");
+        }
+        sb.AppendLine("not set domain type: ");
+        foreach (Type type in noDomain) {
+            sb.AppendLine($"\t{type.Name}");
+        }
+        IOrderedEnumerable<KeyValuePair<Type, int>> orderByDescending = typeCount.OrderByDescending(s => s.Value);
+        sb.AppendLine("Entity Count: ");
+        foreach (var kv in orderByDescending) {
+            if (kv.Value == 1) {
+                continue;
+            }
+            sb.AppendLine($"\t{kv.Key.Name}: {kv.Value}");
+        }
+        return sb.ToString();
+    }
 }
 \end{minted}
-\subsection{UnitGateComponentSystem}
+\subsection{EntryEvent1\_InitShare.cs: Root 根场景添加组件}
 \label{sec-7-2}
+\begin{itemize}
+\item 这里是双端共享组件启动的时候，也就是说，Root.Instance.Scene 并不仅仅只是客户端场景，也是服务端场景。
+\end{itemize}
 \begin{minted}[fontsize=\scriptsize,linenos=false]{csharp}
-public static class UnitGateComponentSystem {
-    public class UnitGateComponentAwakeSystem : AwakeSystem<UnitGateComponent, long> {
-        protected override void Awake(UnitGateComponent self, long a) {
-            self.GateSessionActorId = a;
+// 公用的相关组件的初始化：
+[Event(SceneType.Process)]
+public class EntryEvent1_InitShare: AEvent<EventType.EntryEvent1> {
+
+    protected override async ETTask Run(Scene scene, EventType.EntryEvent1 args) {
+        Root.Instance.Scene.AddComponent<NetThreadComponent>();
+        Root.Instance.Scene.AddComponent<OpcodeTypeComponent>();
+        Root.Instance.Scene.AddComponent<MessageDispatcherComponent>();
+        Root.Instance.Scene.AddComponent<NumericWatcherComponent>();
+        Root.Instance.Scene.AddComponent<AIDispatcherComponent>();
+        Root.Instance.Scene.AddComponent<ClientSceneManagerComponent>();
+        await ETTask.CompletedTask;
+    }
+}
+\end{minted}
+\subsection{EntryEvent2\_InitServer: 服务端启动的时候添加的组件}
+\label{sec-7-3}
+\begin{minted}[fontsize=\scriptsize,linenos=false]{csharp}
+[Event(SceneType.Process)]
+public class EntryEvent2_InitServer: AEvent<ET.EventType.EntryEvent2> {
+    protected override async ETTask Run(Scene scene, ET.EventType.EntryEvent2 args) {
+        // 发送普通actor消息
+        Root.Instance.Scene.AddComponent<ActorMessageSenderComponent>();
+        // 发送location actor消息
+        Root.Instance.Scene.AddComponent<ActorLocationSenderComponent>();
+        // 访问location server的组件
+        Root.Instance.Scene.AddComponent<LocationProxyComponent>();
+        Root.Instance.Scene.AddComponent<ActorMessageDispatcherComponent>();
+        Root.Instance.Scene.AddComponent<ServerSceneManagerComponent>();
+        Root.Instance.Scene.AddComponent<RobotCaseComponent>();
+        Root.Instance.Scene.AddComponent<NavmeshComponent>();
+        // 【添加组件】：这里，还可以再添加一些游戏必要【根组件】，如果可以在服务器启动的时候添加的话。会影响服务器启动性能
+
+        StartProcessConfig processConfig = StartProcessConfigCategory.Instance.Get(Options.Instance.Process);
+        switch (Options.Instance.AppType) {
+        case AppType.Server: {
+            Root.Instance.Scene.AddComponent<NetInnerComponent, IPEndPoint>(processConfig.InnerIPPort);
+            var processScenes = StartSceneConfigCategory.Instance.GetByProcess(Options.Instance.Process);
+            foreach (StartSceneConfig startConfig in processScenes) {
+                await SceneFactory.CreateServerScene(ServerSceneManagerComponent.Instance, startConfig.Id, startConfig.InstanceId, startConfig.Zone, startConfig.Name, startConfig.Type, startConfig);
+            }
+            break;
+        }
+        case AppType.Watcher: {
+            StartMachineConfig startMachineConfig = WatcherHelper.GetThisMachineConfig();
+            WatcherComponent watcherComponent = Root.Instance.Scene.AddComponent<WatcherComponent>();
+            watcherComponent.Start(Options.Instance.CreateScenes);
+            Root.Instance.Scene.AddComponent<NetInnerComponent, IPEndPoint>(NetworkHelper.ToIPEndPoint($"{startMachineConfig.InnerIP}:{startMachineConfig.WatcherPort}"));
+            break;
+        }
+        case AppType.GameTool:
+            break;
+        }
+        if (Options.Instance.Console == 1) {
+            Root.Instance.Scene.AddComponent<ConsoleComponent>();
         }
     }
 }
 \end{minted}
 
-\section{ET7 框架以及【参考项目】的ECS：小单元小类型的生成系，是怎么写的，找例子参考}
+
+\section{ETTask 和 ETVoid: 第三方库的ETTask, 参考ET-EUI 框架}
 \label{sec-8}
 \begin{itemize}
-\item 这些要找的也找不到。下午家里试着把Component 组件再添加回去试试看？上午把项目设计的思路，源项目的破源码再读一读理一理，是希望游戏逻辑与游戏界面能够快速开发、项目进展往后移的。
+\item 特异包装：主要是实际了异步调用的流式写法。它方法定义的内部，是封装有协程异步状态机的？IAsyncStateMachine. 当要运行协程的下一步，也是调用和运行。NET 库里的 IAsyncStateMachine.moveNext()
+\item .NET 还提供了 AsyncMethodBuilder 的 type trait 来让你自己实现这个状态机和你自己的 Task 类型，因此你可以最大程度发挥想象来编写你想控制的一切。ETTask|ETVoid 就是使用底层的这些方法来封装的结果。async/await 是一个纯编译器特性。
+\item 这个框架里ET7 里，就有相关模块 \textbf{【具体说是，两个实体类，实际定义了两种不同返回值ETTask-ETVoid 的协程编译生成方法】} ，能够实现对这个包装的自动编译成协程的编译逻辑方法定义。理解上，感觉像是ET7 框架里，为了这个流式写法，定义了必要的标签系，和相关的协程生成方法，来帮助这个第三方库实现异步调用的流式写法。
+\item 上面的，写得把自己都写昏了。就是ET7 框架是如何实现异步调用的流式写法的呢？它把异步调用封装成协程。面对ET7 框架里广泛用到的ETTask|ETVoid 两类稍带个性化异步任务，如同 ETTask 和 ETVoid 是框架自己的封装一样，这个框架，也使用 .NET 里的 IAsyncStateMachine 等底层接口API 等，自定义了异步协程任务的生成方法。
+\item 这类方法里，都封装有一个ETTask, 因为自定义封装在这些自定义类里，就对可能会用到的操作提供了必要的API, 比如设置异常，拿取任务等等。
+\item 上面的自定义方法生成器：有三类，分别是 AsyncETVoidMethodBuilder, AsyncETTaskMethodBuilder 和 AsyncETTaskCompletedMethodBuilder
+\item 感觉因为这两大返回类型，我没有能看懂看透，所以上面一个部分的消息处理，两个函数Handle() 和 Run() 的返回类型，以及参数被我改得乱七八糟，是不应该的。
+\item 磨刀不误砍柴工，我应该投入时间把这个第三方库一样的包装理解透彻，然后再去弄懂上面一个部分，再去改那些编译错误。
+\item \textbf{【ET-EUI】里：} 原本类的定义什么的，也是一样的，那就是主要去看，他是怎么使用ETVoid, 为什么它使用ETVoid 不会报错，而我在ET7 里用就会。
+\item \textbf{【多线程同步】} 关于多线程同步的理解：来自于网络： 
+\begin{itemize}
+\item ETTASK的由于没有开新线程，也没有使用线程池Task，所以肯定是在主线程运行的，那么游戏开始的SynchronizationContext.SetSynchronizationContext(OneThreadSynchronizationContext.Instance);这句代码有啥用呢？
+\item 个人理解为， \textbf{在ET中虽然主逻辑是单线程的，但是与IO设备，比如从socket读取数据，或者从TCP,KCP获取网络数据得时候，是多线程的获取数据的，所以当数据到达时，为了保证是单线程，所以在获取数据的地方，以回调得方式，将回调方法扔到OneThreadSynchronizationContext中执行} （ \textbf{async设置了同步上下文是线程安全的} ，说的应该也是这个 OneThreadSynchronizationContext() 什么的相关的）
+\item 白话多线程同步原理如下：下面的也是ET 框架中网络异步线程同步中干过的同步执行逻辑。那个类大概是 NetService.cs. 就是分主线程，异步线程，有队列，Update() 里同步的。
+\begin{itemize}
+\item ET是单线程的，所以不会管理线程
+\item 跨线程都是把委托投递到一个队列，主线程不停从队列中取出委托执行
+\item 你看看asynctool的代码，本质上就是把委托投递到主线程
+\item 每帧取完队列中的所有委托，执行完
 \end{itemize}
-\subsection{IComponentSerialize:}
+\item 这个细节，是自己第一个游戏里使用ET-EUI 作为服务端，非ET 框架的客户端与服务端连接时，自己曾经遇到过的。非ET 框架的客户端，是使用了一个其它的 UnityPlayer 里一个API 相关的第三方来同步异步线程的结果到主线程。所以这个细节还是印象深刻。
+\end{itemize}
+\item 首先要能把控得住多线程，才能谈性能。其次，et是服务端多进程，同样能利用多核。et是逻辑单线程，并不意味着只能单线程，你能把控得住，照样可以多线程，一般人是不行的。（这些，看不懂，感觉更像是避重就轻吹牛皮一样。。。）
+\item \textbf{【ETTask-await 后面的执行线程：】}
+\begin{itemize}
+\item async await 如果用的Task, await后面的部分是不确定在哪个线程执行的,猫大以前4.0的做法就是把上下文抛到主线程,让主线程执行.
+\item 如果用的是ETTask, await后面的部分是一定在主线程执行的. 就完全相当于写了个回调方法了
+\item Task 实际上也是回调, 不过这个回调方法的执行原本可能不在主线程罢了
+\end{itemize}
+\item ETVoid是代替async void，意思是新开一个协程。ettask跟task一样。当然task不去await也相当于新开协程，但是编辑器会冒出提示，提示你await。所以新开协程最好用ETVoid。4.0用async void。使用场景，自己写写就明白啦. 协程就是回调.
+\item \textbf{无GC ETTask},其实是利用对象池，注意，必须小心使用，不懂不要乱用。无GC 的原理同自己写第一个游戏，使用资源池是一样的，就是说，当一个ETTask 使用完毕，不再使用的时候，不是要GC 来回收，而是程序的逻辑自己管理，回收到对象池管理器，对于应用程序来说，就是不释放，自己管理它的再使用。不释放就不会引起GC 回收，所以叫无GC.
+\begin{itemize}
+\item 请不要随便使用ETTask的对象池，除非你完全搞懂了ETTask!!!
+\item 假如开启了池,await之后不能再操作ETTask，否则可能操作到再次从池中分配出来的ETTask，产生灾难性的后果。（自己的理解， await 之后，再操作ETTask, 那么操作的极有可能是【当 boolean fromPool ＝ true】从对象池新取出的一个异步任务，不是预期行为，当然就会引起一片混乱。。。可是，框架里仍然有狠多对异步任务 SetResult() 的地方，尤其是各种服的消息处理器处理逻辑里。什么情境下可以安全地使用SetResult(), 需要自己去搞明白）
+\item SetResult的时候请现将tcs置空，避免多次对同一个ETTask SetResult. （这里，对一个异步任务，设置结果 SetResult(), 可能会设置多次吗？）
+\item 大部分情况可以用objectwait代替ettask，推荐使用，绝对不会出问题
+\end{itemize}
+\item 这里因为弄不明白，他们建议的学习方法是：
+\begin{itemize}
+\item ettask还要啥教程？
+\item 要搞懂ettask 下载一个jetbrain peek工具，反编译下看下生成的代码就行了。
+\item 参考Timercomponent，看懂就全明白了
+\item 看网上的文章看十年也不会明白，自己写一下timercomponet啥都懂了
+\item 接下来，自己尝试理解这部分的方法应该是：给VS 2022 安装第三方插件库 ILSpy, 然后借用插件把编译码自己弄出来，插日志，作任何可以帮助自己理解的东西来理解这部分。 \textbf{【先给VS安装一个插件ILSpy,这样更容易反编译代码进行查看,另外要注意反编译async和await的时候,要把C\#代码版本改为4.0哦。】} 前在，这是网上提示的反编译方法。这个，改天再接着看，先再事理理解一点儿别的。今天一定更新一下。明天出行，没时间看和更新。
+\end{itemize}
+\item 【爱表哥，爱生活！！！活宝妹就是一定要嫁给亲爱的表哥！！！】
+\end{itemize}
+\subsection{IAsyncStateMachine}
 \label{sec-8-1}
 \begin{itemize}
-\item ET7 的重构里，系统框架比较强大，这些必要的接口，都变成了必要的标签系，狠多可以自动系统触发或是调用。必要时只需要必布必要事件就可以了
-\item 这个接口的功能，与 Unity 自带的 ISerializationCallbackReceiver 功能类似。Unity 提供两个回调接口，通过实现该接口的两个方法OnBeforeSerialize 和 OnAfterDeserialize，使得原本不能被引擎正确序列化的类可以按照程序员的要求被加工成引擎能够序列化的类型。
-\begin{minted}[fontsize=\scriptsize,linenos=false]{csharp}
-// 在序列化前或者反序列化之后需要做一些操作，可以实现该接口，该接口的方法需要手动调用
-// 相比ISupportInitialize接口，BeginSerialize在BeginInit之前调用，EndDeSerialize在EndInit之后调用
-// 并且需要手动调用，可以在反序列化之后，在次方法中将注册组件到EventSystem之中等等
-public interface IComponentSerialize {
-    // 序列化之前调用
-    void BeginSerialize();
-    // 反序列化之后调用
-    void EndDeSerialize();
-}
-\end{minted}
-\item 可以去找：【ET7 框架】里，相关的接口与标签触发和发布逻辑。
-\item ET7 提供了 ISerializeToEntity 接口和IDeserialize，但是并没有接到任何使用的地方。
+\item 异步方法中，每遇见一个 await 调用，都会生成一个异步状态类，这个异步状态类会实现这个接口
 \end{itemize}
 \begin{minted}[fontsize=\scriptsize,linenos=false]{csharp}
-public interface ISerializeToEntity {  }
-
-public interface IDeserialize {
-}
-public interface IDeserializeSystem: ISystemType {
-    void Run(Entity o);
-}
-// 反序列化后执行的System
-[ObjectSystem]
-public abstract class DeserializeSystem<T> : IDeserializeSystem where T: Entity, IDeserialize {
-    void IDeserializeSystem.Run(Entity o) {
-        this.Deserialize((T)o);
+namespace System.Runtime.CompilerServices {
+    public interface IAsyncStateMachine {
+        void MoveNext();
+        void SetStateMachine(IAsyncStateMachine stateMachine);
     }
-    Type ISystemType.SystemType() {
-        return typeof(IDeserializeSystem);
-    }
-    InstanceQueueIndex ISystemType.GetInstanceQueueIndex() {
-        return InstanceQueueIndex.None;
-    }
-    Type ISystemType.Type() {
-        return typeof(T);
-    }
-    protected abstract void Deserialize(T self);
 }
 \end{minted}
-
-\subsection{ClientComponent:【参考项目】客户端组件，找个ET7 里的组件}
+\subsection{enum AwaiterStatus: IAwaiter.cs 文件里. 理解为异步任务的现执行进展状态}
 \label{sec-8-2}
 \begin{itemize}
-\item 这个组件，感觉是客户端单例，帮助把本地玩家给绑定到客户端单例。
+\item 现框架里，扩展 IAwaiter, 自定义的现框架 ETTask 所可能有的三种不同状态。
 \begin{minted}[fontsize=\scriptsize,linenos=false]{csharp}
-[ObjectSystem]
-public class ClientComponentAwakeSystem : AwakeSystem<ClientComponent> {
-    public override void Awake(ClientComponent self) {
-        self.Awake();
-    }
+public enum AwaiterStatus: byte {
+    // The operation has not yet completed.
+    Pending = 0,// 这个用在判断语句里比较多，主要用它来判断：异步任务是否已经完成 
+    // The operation completed successfully.
+    Succeeded = 1,
+    // The operation completed with an error.
+    Faulted = 2,
 }
-public class ClientComponent : Component {
-    public static ClientComponent Instance { get; private set; }
-    public User LocalPlayer { get; set; }
-    public void Awake() {
-        Instance = this;
+\end{minted}
+\end{itemize}
+\subsection{ETTaskCompleted: 已经完成了的异步任务。比较特殊：可以简单进行写结果？等等的必要回收工作，就可以返回异步任务对象池回收再利用？}
+\label{sec-8-3}
+\begin{itemize}
+\item 因为我把 AsyncMethodBuilder 理解成为：异步任务的协程编译器编译逻辑。
+\item 所以这个类就是定义，异步任务协程中的一个特殊状态：异步任务结束了，但是还没能写结果时的IAsyncStateMachine|IAwater 的一个最为特殊的状态。它可以用作可能需要写结果时的一个准备，但也可能不需要再写结果？在框架里用得狠多。所以它狠轻量，可以快速写结果或是快速回收到对象池复用。
+\item 因为它是协程异步状态机中的一个相对特殊状态，本质上是异步状态机中的一个极特殊的状态，也提供了必要的API, 比如写结果。
+\begin{minted}[fontsize=\scriptsize,linenos=false]{csharp}
+[AsyncMethodBuilder(typeof (AsyncETTaskCompletedMethodBuilder))]
+public struct ETTaskCompleted: ICriticalNotifyCompletion {
+    [DebuggerHidden]
+// 能不能理解为，已经结束了的异步任务ETTaskCompleted, 也是协程异步状态机中的一个状态，是IAwaker 的实体类实现状态，返回这个当前已经结束了的状态IAwater..
+    public ETTaskCompleted GetAwaiter() {
+        return this;
+    }
+    [DebuggerHidden]
+    public bool IsCompleted => true;
+    [DebuggerHidden]
+    public void GetResult() {
+    }
+// 就是说：下面的两个回调函数，可以帮  助把异步任务的执行结果给返回回去
+    [DebuggerHidden]
+    public void OnCompleted(Action continuation) {              
+    }
+    [DebuggerHidden]
+    public void UnsafeOnCompleted(Action continuation) {  
     }
 }
 \end{minted}
 \end{itemize}
-
-\section{Protobuf 相关，【Protobuf 里进程间传递的游戏数据相关信息：两个思路】}
-\label{sec-9}
-\begin{itemize}
-\item 【一、】查找 enum 可能可以用系统平台下的 protoc 来代为生成，效果差不多。只起现 Proto2CS.cs 编译的补充作用。
-\item 【二、】Card 类下的两个 enum 变量，在ILRuntime 热更新库下，还是需要帮它连一下的。用的是 HybridCLR
-\item 【三、】查找 protoc 命令下，如何C\# 索引 Unity 第三方库。
-\item 【四、】repeated 逻辑没有处理好
+\subsection{struct ETVoid: ICriticalNotifyCompletion. 这里涉及协程的分阶段的执行相关逻辑的生成方法自动化相关的标签}
+\label{sec-8-4}
 \begin{minted}[fontsize=\scriptsize,linenos=false]{csharp}
-message Actor_GamerPlayCard_Req // IActorRequest
-{
-	int32 RpcId = 90;
-	int64 ActorId = 91;
-    repeated ET Card Cards = 1;
+[AsyncMethodBuilder(typeof (AsyncETVoidMethodBuilder))]// 【异步方法生成标签】：是。NET CompilerService里的属性标签。自动生成协程相关方法的标签？今天晚上也可以细看一下
+internal struct ETVoid: ICriticalNotifyCompletion {
+    [DebuggerHidden]
+        public void Coroutine() { }
+    [DebuggerHidden]
+        public bool IsCompleted => true;
+    [DebuggerHidden]
+        public void OnCompleted(Action continuation) { }
+    [DebuggerHidden]
+        public void UnsafeOnCompleted(Action continuation) { }
 }
 \end{minted}
-\item 【Windows 下的 Protobuf 编译环境】：配置好，只是作为与ET 框架的Proto2CS.cs 所指挥的编译结果，作一个对比，两者应该效果是一样的，或是基本一样的，除了自定义里没有处理 enum.
-\item Windows 下的命令行，就是用 protoc 来编译，可以参考如下. （这是 .cs 源码下的）
-\begin{minted}[fontsize=\scriptsize,linenos=false]{csharp}
-CommandRun($"protoc.exe", $"--csharp_out=\"./{outputPath}\" --proto_path=\"{protoPath}\" {protoName}");
-\end{minted}
-\item 现在的问题是， \textbf{Protobuf消息里面居然是有 unity 第三方库的索引} 。
-\item 直接把 enum 生成的那三个 .cs 类分别复制进双端，服务器端与客户端。包括Card 类。那些编译错误会去天边。哈哈哈，除了一个Card 的两个变量之外（CardSuits, CardWeight）。
-\item 【热更新库】：现在剩下的问题，就成为，判定是用了哪个热更新的库，ILRuntime, 还是 HybridCLR, 如果帮它连那两个变量。好像接的是 HybridCLR. 这个库是我之前还不曾真正用过的。
+\subsection{ETTask: ICriticalNotifyCompletion:}
+\label{sec-8-5}
 \begin{itemize}
-\item 相比于ET6，彻底剔除了ILRuntime，使得代码简洁了不少，并且比较稳定
+\item 这个类的定义比较大，分普通类，和泛型类。我的笔记需要记在同一个地方。今天早上这个类又记错地方记到ET-EUI 上去了
+\begin{minted}[fontsize=\scriptsize,linenos=false]{csharp}
+[AsyncMethodBuilder(typeof (ETAsyncTaskMethodBuilder))]
+public class ETTask: ICriticalNotifyCompletion {
+    public static Action<Exception> ExceptionHandler;// 异常回调
+    public static ETTaskCompleted CompletedTask {    // 异步任务结束后的封装
+        get {
+            return new ETTaskCompleted();
+        }
+    }
+    private static readonly Queue<ETTask> queue = new Queue<ETTask>();// 异步任务对象池
+    // 请不要随便使用ETTask的对象池，除非你完全搞懂了ETTask!!!
+    // 假如开启了池,await之后不能再操作ETTask，否则可能操作到再次从池中分配出来的ETTask，产生灾难性的后果
+    // SetResult的时候请现将tcs置空，避免多次对同一个ETTask SetResult
+    public static ETTask Create(bool fromPool = false) {
+        if (!fromPool) 
+            return new ETTask();
+        if (queue.Count == 0) 
+            return new ETTask() {fromPool = true};    
+        return queue.Dequeue();
+    }
+    private void Recycle() { // 涉及ETTask 无GC 的逻辑实现：
+        if (!this.fromPool)  // 因为不返回对象池，所以会GC
+            return; // 原则：只有从池里取出来的，才返回池
+        this.state = AwaiterStatus.Pending;// 【没明白：】回收时还设置为 Pending, 什么时候写的当前结果？应该是在回收前
+        this.callback = null;
+        if (queue.Count > 1000)  // 因为对象池中，异步任务数目已达 1000, 不再回收，也会产生 GC
+            return;
+        queue.Enqueue(this); // 真正无GC, 因为回收到对象池，队列里去了
+    }
+    private bool fromPool;
+    private AwaiterStatus state;
+    private object callback; // Action or ExceptionDispatchInfo
+    private ETTask() {  }
+    // 【不明白下面两个方法】：不知道这两个方法，绕来绕去，在干什么？
+    [DebuggerHidden] // 下面，旦凡带 async 关键字的方法，都是异步方法，编译器编译 async 方法时，会自动生成方法所对应的Coroutine() 方法？
+    private async ETVoid InnerCoroutine() { // 这里，怎么就可以用 ETVoid 了呢？ private 内部异步方法
+        await this; // 【不明白】：每次看见 await 后面接一个单词，就不知道是在等什么？等待这个ETTask 异步任务类初始化完成？
+    }
+    [DebuggerHidden]
+    public void Coroutine() { // 公用无返回，非异步方法。它调用了类内部私有的异步方法 InnerCoroutine() 
+        InnerCoroutine().Coroutine();// 这里因为理解不透，总感觉同上面的方法，返回 this, 又调用了自己本方法 Coroutine() 一样。。
+    }
+    [DebuggerHidden]
+    public ETTask GetAwaiter() {
+        return this;
+    }
+    public bool IsCompleted {
+        [DebuggerHidden]
+        get {
+            return this.state != AwaiterStatus.Pending; // 只要不是 Pending 状态，就是异步任务执行结束
+        }
+    }
+    [DebuggerHidden]
+    public void UnsafeOnCompleted(Action action) {
+        if (this.state != AwaiterStatus.Pending) { // 如果当前异步任务执行结束，就触发非空回调
+            action?.Invoke();
+            return;
+        }
+        this.callback = action; // 任务还没有结束，就纪录回调备用
+    }
+    [DebuggerHidden]
+    public void OnCompleted(Action action) {
+        this.UnsafeOnCompleted(action);
+    }
+    [DebuggerHidden]
+    public void GetResult() {
+        switch (this.state) {
+            case AwaiterStatus.Succeeded:
+                this.Recycle();
+                break;
+            case AwaiterStatus.Faulted:
+                ExceptionDispatchInfo c = this.callback as ExceptionDispatchInfo;
+                this.callback = null;
+                this.Recycle();
+                c?.Throw();
+                break;
+            default:
+                throw new NotSupportedException("ETTask does not allow call GetResult directly when task not completed. Please use 'await'.");
+        }
+    }
+    [DebuggerHidden]
+    public void SetResult() {
+        if (this.state != AwaiterStatus.Pending) {
+            throw new InvalidOperationException("TaskT_TransitionToFinal_AlreadyCompleted");
+        }
+        this.state = AwaiterStatus.Succeeded;
+        Action c = this.callback as Action;
+        this.callback = null;
+        c?.Invoke();
+    }
+    [MethodImpl(MethodImplOptions.AggressiveInlining)]
+    [DebuggerHidden]
+    public void SetException(Exception e) {
+        if (this.state != AwaiterStatus.Pending) {
+            throw new InvalidOperationException("TaskT_TransitionToFinal_AlreadyCompleted");
+        }
+        this.state = AwaiterStatus.Faulted;
+        Action c = this.callback as Action;
+        this.callback = ExceptionDispatchInfo.Capture(e);
+        c?.Invoke();
+    }
+}
+[AsyncMethodBuilder(typeof (ETAsyncTaskMethodBuilder<>))]
+public class ETTask<T>: ICriticalNotifyCompletion {
+    private static readonly Queue<ETTask<T>> queue = new Queue<ETTask<T>>();
+    // 请不要随便使用ETTask的对象池，除非你完全搞懂了ETTask!!!
+    // 假如开启了池,await之后不能再操作ETTask，否则可能操作到再次从池中分配出来的ETTask，产生灾难性的后果
+    // SetResult的时候请现将tcs置空，避免多次对同一个ETTask SetResult
+    public static ETTask<T> Create(bool fromPool = false) {
+        if (!fromPool) 
+            return new ETTask<T>();
+        if (queue.Count == 0) 
+            return new ETTask<T>() { fromPool = true };    
+        return queue.Dequeue();
+    }
+    private void Recycle() {
+        if (!this.fromPool) 
+            return;
+        this.callback = null;
+        this.value = default;
+        this.state = AwaiterStatus.Pending;
+        // 太多了
+        if (queue.Count > 1000) 
+            return;
+        queue.Enqueue(this);
+    }
+    private bool fromPool;
+    private AwaiterStatus state;
+    private T value;
+    private object callback; // Action or ExceptionDispatchInfo
+    private ETTask() {
+    }
+    [DebuggerHidden]
+    private async ETVoid InnerCoroutine() {
+        await this;
+    }
+    [DebuggerHidden]
+    public void Coroutine() {
+        InnerCoroutine().Coroutine();
+    }
+    [DebuggerHidden]
+    public ETTask<T> GetAwaiter() {
+        return this;
+    }
+    [DebuggerHidden]
+    public T GetResult() {
+        switch (this.state) {
+        case AwaiterStatus.Succeeded:
+            T v = this.value;
+            this.Recycle();
+            return v;
+        case AwaiterStatus.Faulted:
+            ExceptionDispatchInfo c = this.callback as ExceptionDispatchInfo;
+            this.callback = null;
+            this.Recycle();
+            c?.Throw();
+            return default;
+        default:
+            throw new NotSupportedException("ETask does not allow call GetResult directly when task not completed. Please use 'await'.");
+        }
+    }
+    public bool IsCompleted {
+        [DebuggerHidden]
+        get {
+            return state != AwaiterStatus.Pending;
+        }
+    } 
+    [DebuggerHidden]
+    public void UnsafeOnCompleted(Action action) {
+        if (this.state != AwaiterStatus.Pending) {
+            action?.Invoke();
+            return;
+        }
+        this.callback = action;
+    }
+    [DebuggerHidden]
+    public void OnCompleted(Action action) {
+        this.UnsafeOnCompleted(action);
+    }
+    [DebuggerHidden]
+    public void SetResult(T result) {
+        if (this.state != AwaiterStatus.Pending) {
+            throw new InvalidOperationException("TaskT_TransitionToFinal_AlreadyCompleted");
+        }
+        this.state = AwaiterStatus.Succeeded;
+        this.value = result;
+        Action c = this.callback as Action;
+        this.callback = null;
+        c?.Invoke();
+    }
+    [DebuggerHidden]
+    public void SetException(Exception e) {
+        if (this.state != AwaiterStatus.Pending) {
+            throw new InvalidOperationException("TaskT_TransitionToFinal_AlreadyCompleted");
+        }
+        this.state = AwaiterStatus.Faulted;
+        Action c = this.callback as Action;
+        this.callback = ExceptionDispatchInfo.Capture(e);
+        c?.Invoke();
+    }
+}
+\end{minted}
 \end{itemize}
+\subsection{ETCancellationToken: 管理所有的取消？回调：因为可能不止一个取消回调，所以 HashSet 管理}
+\label{sec-8-6}
+\begin{minted}[fontsize=\scriptsize,linenos=false]{csharp}
+public class ETCancellationToken {// 管理所有的【取消】回调：因为可能不止一个取消回调，所以 HashSet 管理 
+    private HashSet<Action> actions = new HashSet<Action>();
+    public void Add(Action callback) {
+        // 如果action是null，绝对不能添加,要抛异常，说明有协程泄漏
+        // 【不喜欢这个注释，看不懂，感觉它吓唬人的。。】
+        this.actions.Add(callback);
+    }
+    public void Remove(Action callback) {
+        this.actions?.Remove(callback);
+    }
+    public bool IsDispose() {
+        return this.actions == null;
+    }
+    public void Cancel() {
+        if (this.actions == null) {
+            return;
+        }
+        this.Invoke();
+    }
+    private void Invoke() {
+        HashSet<Action> runActions = this.actions;
+        this.actions = null;
+        try {
+            foreach (Action action in runActions) {
+                action.Invoke();
+            }
+        }
+        catch (Exception e) {
+            ETTask.ExceptionHandler.Invoke(e);
+        }
+    }
+}
+\end{minted}
+\subsection{ETTaskHelper: 有个类中类 CoroutineBlocker 看不懂}
+\label{sec-8-7}
+\begin{minted}[fontsize=\scriptsize,linenos=false]{csharp}
+public static class ETTaskHelper {
+    public static bool IsCancel(this ETCancellationToken self) {
+        if (self == null) 
+            return false;
+        return self.IsDispose();
+    }
+    // 【看不懂】：感觉理解这个类有难度
+    private class CoroutineBlocker {
+        private int count; // 不知道，这个变量记的是什么？
+        private ETTask tcs;
+        public CoroutineBlocker(int count) {
+            this.count = count;
+        }
+        public async ETTask RunSubCoroutineAsync(ETTask task) {
+            try {
+                await task;
+            }
+            finally {
+                --this.count;
+                if (this.count <= 0 && this.tcs != null) { // 写结果？
+                    ETTask t = this.tcs;
+                    this.tcs = null;
+                    t.SetResult();
+                }
+            }
+        }
+        public async ETTask WaitAsync() {
+            if (this.count <= 0) 
+                return;
+            this.tcs = ETTask.Create(true);
+            await tcs;
+        }
+    }
+    public static async ETTask WaitAny(List<ETTask> tasks) {
+        if (tasks.Count == 0) 
+            return;
+        CoroutineBlocker coroutineBlocker = new CoroutineBlocker(1);
+        foreach (ETTask task in tasks) {
+            coroutineBlocker.RunSubCoroutineAsync(task).Coroutine();
+        }
+        await coroutineBlocker.WaitAsync();
+    }
+    public static async ETTask WaitAny(ETTask[] tasks) {
+        if (tasks.Length == 0) 
+            return;
+        CoroutineBlocker coroutineBlocker = new CoroutineBlocker(1);
+        foreach (ETTask task in tasks) {
+            coroutineBlocker.RunSubCoroutineAsync(task).Coroutine();
+        }
+        await coroutineBlocker.WaitAsync();
+    }
+    public static async ETTask WaitAll(ETTask[] tasks) {
+        if (tasks.Length == 0) 
+            return;
+        CoroutineBlocker coroutineBlocker = new CoroutineBlocker(tasks.Length);
+        foreach (ETTask task in tasks) {
+            coroutineBlocker.RunSubCoroutineAsync(task).Coroutine();
+        }
+        await coroutineBlocker.WaitAsync();
+    }
+    public static async ETTask WaitAll(List<ETTask> tasks) {
+        if (tasks.Count == 0) 
+            return;
+        CoroutineBlocker coroutineBlocker = new CoroutineBlocker(tasks.Count);
+        foreach (ETTask task in tasks) {
+            coroutineBlocker.RunSubCoroutineAsync(task).Coroutine();
+        }
+        await coroutineBlocker.WaitAsync();
+    }
+}
+\end{minted}
+\subsection{ETAsyncTaskMethodBuilder: 同样是换汤不换药的两个部分：普通类与泛型类}
+\label{sec-8-8}
+\begin{minted}[fontsize=\scriptsize,linenos=false]{csharp}
+public struct ETAsyncTaskMethodBuilder {
+    private ETTask tcs;
+    // 1. Static Create method.
+    [DebuggerHidden]
+    public static ETAsyncTaskMethodBuilder Create() {
+        ETAsyncTaskMethodBuilder builder = new ETAsyncTaskMethodBuilder() { tcs = ETTask.Create(true) };
+        return builder;
+    }
+    // 2. TaskLike Task property.
+    [DebuggerHidden]
+    public ETTask Task => this.tcs;
+    // 3. SetException
+    [DebuggerHidden]
+    public void SetException(Exception exception) {
+        this.tcs.SetException(exception);
+    }
+    // 4. SetResult
+    [DebuggerHidden]
+    public void SetResult() {
+        this.tcs.SetResult();
+    }
+    // 5. AwaitOnCompleted
+    [DebuggerHidden]
+    public void AwaitOnCompleted<TAwaiter, TStateMachine>(ref TAwaiter awaiter, ref TStateMachine stateMachine) where TAwaiter : INotifyCompletion where TStateMachine : IAsyncStateMachine {
+        awaiter.OnCompleted(stateMachine.MoveNext);
+    }
+    // 6. AwaitUnsafeOnCompleted
+    [DebuggerHidden]
+    [SecuritySafeCritical]
+    public void AwaitUnsafeOnCompleted<TAwaiter, TStateMachine>(ref TAwaiter awaiter, ref TStateMachine stateMachine) where TAwaiter : ICriticalNotifyCompletion where TStateMachine : IAsyncStateMachine {
+        awaiter.OnCompleted(stateMachine.MoveNext);
+    }
+    // 7. Start
+    [DebuggerHidden]
+    public void Start<TStateMachine>(ref TStateMachine stateMachine) where TStateMachine : IAsyncStateMachine {
+        stateMachine.MoveNext();
+    }
+    // 8. SetStateMachine
+    [DebuggerHidden]
+    public void SetStateMachine(IAsyncStateMachine stateMachine) {
+    }
+}
+public struct ETAsyncTaskMethodBuilder<T> {
+    private ETTask<T> tcs;
+    // 1. Static Create method.
+    [DebuggerHidden]
+    public static ETAsyncTaskMethodBuilder<T> Create() {
+        ETAsyncTaskMethodBuilder<T> builder = new ETAsyncTaskMethodBuilder<T>() { tcs = ETTask<T>.Create(true) };
+        return builder;
+    }
+    // 2. TaskLike Task property.
+    [DebuggerHidden]
+    public ETTask<T> Task => this.tcs;
+    // 3. SetException
+    [DebuggerHidden]
+    public void SetException(Exception exception) {
+        this.tcs.SetException(exception);
+    }
+    // 4. SetResult
+    [DebuggerHidden]
+    public void SetResult(T ret) {
+        this.tcs.SetResult(ret);
+    }
+    // 5. AwaitOnCompleted
+    [DebuggerHidden]
+    public void AwaitOnCompleted<TAwaiter, TStateMachine>(ref TAwaiter awaiter, ref TStateMachine stateMachine) where TAwaiter : INotifyCompletion where TStateMachine : IAsyncStateMachine {
+        awaiter.OnCompleted(stateMachine.MoveNext);
+    }
+    // 6. AwaitUnsafeOnCompleted
+    [DebuggerHidden]
+    [SecuritySafeCritical]
+    public void AwaitUnsafeOnCompleted<TAwaiter, TStateMachine>(ref TAwaiter awaiter, ref TStateMachine stateMachine) where TAwaiter : ICriticalNotifyCompletion where TStateMachine : IAsyncStateMachine {
+        awaiter.OnCompleted(stateMachine.MoveNext);
+    }
+    // 7. Start
+    [DebuggerHidden]
+    public void Start<TStateMachine>(ref TStateMachine stateMachine) where TStateMachine : IAsyncStateMachine {
+        stateMachine.MoveNext();
+    }
+    // 8. SetStateMachine
+    [DebuggerHidden]
+    public void SetStateMachine(IAsyncStateMachine stateMachine) {
+    }
+}
+\end{minted}
+\subsection{AsyncETTaskCompletedMethodBuilder:}
+\label{sec-8-9}
+\begin{minted}[fontsize=\scriptsize,linenos=false]{csharp}
+public struct AsyncETTaskCompletedMethodBuilder {
+    // 1. Static Create method.
+    [DebuggerHidden]
+    public static AsyncETTaskCompletedMethodBuilder Create() {
+        AsyncETTaskCompletedMethodBuilder builder = new AsyncETTaskCompletedMethodBuilder();
+        return builder;
+    }
+    // 2. TaskLike Task property(void)
+    public ETTaskCompleted Task => default;
+    // 3. SetException
+    [DebuggerHidden]
+    public void SetException(Exception e) {
+        ETTask.ExceptionHandler.Invoke(e);
+    }
+    // 4. SetResult
+    [DebuggerHidden]
+    public void SetResult() { // do nothing
+    }
+    // 5. AwaitOnCompleted
+    [DebuggerHidden]
+    public void AwaitOnCompleted<TAwaiter, TStateMachine>(ref TAwaiter awaiter, ref TStateMachine stateMachine) where TAwaiter : INotifyCompletion where TStateMachine : IAsyncStateMachine {
+        awaiter.OnCompleted(stateMachine.MoveNext);
+    }
+    // 6. AwaitUnsafeOnCompleted
+    [DebuggerHidden]
+    [SecuritySafeCritical]
+    public void AwaitUnsafeOnCompleted<TAwaiter, TStateMachine>(ref TAwaiter awaiter, ref TStateMachine stateMachine) where TAwaiter : ICriticalNotifyCompletion where TStateMachine : IAsyncStateMachine {
+        awaiter.UnsafeOnCompleted(stateMachine.MoveNext);
+    }
+    // 7. Start
+    [DebuggerHidden]
+    public void Start<TStateMachine>(ref TStateMachine stateMachine) where TStateMachine : IAsyncStateMachine {
+        stateMachine.MoveNext();
+    }
+    // 8. SetStateMachine
+    [DebuggerHidden]
+    public void SetStateMachine(IAsyncStateMachine stateMachine) {
+    }
+}
+\end{minted}
+\subsection{AsyncETVoidMethodBuilder: 定义的是 async ETVoid 的编译方法 ?}
+\label{sec-8-10}
+\begin{minted}[fontsize=\scriptsize,linenos=false]{csharp}
+// 异步ETVoid 内部生成方法：
+internal struct AsyncETVoidMethodBuilder {
+    // 1. Static Create method.
+    [DebuggerHidden]
+    public static AsyncETVoidMethodBuilder Create() {
+        AsyncETVoidMethodBuilder builder = new AsyncETVoidMethodBuilder();
+        return builder;
+    }
+    // 2. TaskLike Task property(void)
+    [DebuggerHidden]
+    public ETVoid Task => default;
+    // 3. SetException
+    [DebuggerHidden]
+    public void SetException(Exception e) {
+        ETTask.ExceptionHandler.Invoke(e);
+    }
+    // 4. SetResult
+    [DebuggerHidden]
+    public void SetResult() {
+        // do nothing: 因为它实际的返回值是 void 
+    }
+    // 5. AwaitOnCompleted
+    [DebuggerHidden]
+    public void AwaitOnCompleted<TAwaiter, TStateMachine>(ref TAwaiter awaiter, ref TStateMachine stateMachine) where TAwaiter : INotifyCompletion where TStateMachine : IAsyncStateMachine {
+        awaiter.OnCompleted(stateMachine.MoveNext);
+    }
+    // 6. AwaitUnsafeOnCompleted
+    [DebuggerHidden]
+    [SecuritySafeCritical]
+    public void AwaitUnsafeOnCompleted<TAwaiter, TStateMachine>(ref TAwaiter awaiter, ref TStateMachine stateMachine) where TAwaiter : ICriticalNotifyCompletion where TStateMachine : IAsyncStateMachine {
+        awaiter.UnsafeOnCompleted(stateMachine.MoveNext);
+    }
+    // 7. Start
+    [DebuggerHidden]
+    public void Start<TStateMachine>(ref TStateMachine stateMachine) where TStateMachine : IAsyncStateMachine {
+        stateMachine.MoveNext();
+    }
+    // 8. SetStateMachine
+    [DebuggerHidden]
+    public void SetStateMachine(IAsyncStateMachine stateMachine) {
+    }
+}
+\end{minted}
+\subsection{ICriticalNotifyCompletion:}
+\label{sec-8-11}
+\begin{minted}[fontsize=\scriptsize,linenos=false]{csharp}
+namespace System.Runtime.CompilerServices {
+// 接口类：提供了一个，任务完成后的回调接口
+    public interface ICriticalNotifyCompletion : INotifyCompletion {
+        [SecurityCritical]
+        void UnsafeOnCompleted(Action continuation);
+    }
+}
+\end{minted}
+\subsection{AsyncMethodBuilderAttribute:.NET 系统的标签}
+\label{sec-8-12}
+\begin{itemize}
+\item 自己先前没能理解，为什么标记了【AsyncMethodBuilder(typeof(className))】就能标记某个类的协程生成方法
+\item 是因为这个系统标签，它申明了 AttributeUsage 属性，申明了适用类型，可以是(AttributeTargets.Class | AttributeTargets.Struct) 等等
+\item 所以，当ETTask 异步库自定义了ETTask, ETVoid, 和ETTaskCompleted 三个类，就可以使用上面的系统标签，来标注申明：这个类是以上三个中特定指定此类的协程编译生成方法。
+\begin{minted}[fontsize=\scriptsize,linenos=false]{csharp}
+[AttributeUsage(AttributeTargets.Class | AttributeTargets.Struct | AttributeTargets.Enum | AttributeTargets.Interface | AttributeTargets.Delegate, Inherited = false, AllowMultiple = false)]
+public sealed class AsyncMethodBuilderAttribute : Attribute {
+    public AsyncMethodBuilderAttribute(Type builderType);
+    public Type BuilderType { get; }
+}// 【任何时候，活宝妹就是一定要嫁给亲爱的表哥！！！爱表哥，爱生活！！！】
+\end{minted}
 \end{itemize}
 % Emacs 28.2 (Org mode 8.2.7c)
 \end{document}
